fixed text overflow on list border

--- a/css/main.css
+++ b/css/main.css
@@ -335,6 +335,10 @@ a {  color: #9C27B0;  }
   display: inline-block;
 }
 
+.list-group-item p {
+    margin-left: 10px;
+}
+
 /* 8. Footer
 ---------------------------------------*/
 
